--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: submit
 
 on:
   schedule:
-    - cron: '0 4 * * *'
-    # 中午12点准时提交
+    - cron: '0 1 * * *'
+    # 每天9点准时提交
     
 jobs:
   punch:
